@@ -227,34 +227,34 @@ xmlns:svg="http://www.w3.org/2000/svg">
     <svg:polygon style="fill: background"
     points="0,0 0.2,0 0.2,1.15578 0.524981,1.80253 0.863281,1.80253 1.27123,0.996577 5.8,1 5.8,0 6,0 6,1.2 1.4,1.2 1,2 0.4,2 0,1.2 " />
 
-    <svg:polygon style="stroke-width: 1; stroke: #000000"
+    <svg:polygon style="stroke-width: 1; stroke: foreground"
     points="0,0 0.2,0 0.186681,1.15578 0.524981,1.80253 0.863281,1.80253 1.27123,0.996577 5.8,1 5.8,0 6,0 6,1.2 1.4,1.2 1,2 0.4,2 0,1.2 " />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="2.8"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="2.8"
     y1="0.4" x2="3.4" y2="0.4" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="3"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="3"
     y1="0.2" x2="3.2" y2="0.2" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="3"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="3"
     y1="0.2" x2="3.1" y2="0.4" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="3.2"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="3.2"
     y1="0.2" x2="3.1" y2="0.4" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="3"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="3"
     y1="0.46" x2="3.2" y2="0.46" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="3.04"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="3.04"
     y1="0.52" x2="3.16" y2="0.52" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="3.08"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="3.08"
     y1="0.6" x2="3.12" y2="0.6" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="0.2"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="0.2"
     y1="0.4" x2="2.8" y2="0.4" />
 
-    <svg:line style="stroke-width: 0.5; stroke: #000000" x1="3.4"
+    <svg:line style="stroke-width: 0.5; stroke: foreground" x1="3.4"
     y1="0.4" x2="5.8" y2="0.4" />
   </svg:svg>
 </shape>
