@@ -17,16 +17,16 @@ xmlns:svg="http://www.w3.org/2000/svg">
     <svg:path style="fill: background"
     d="M 0.8 1 C 1,1 1,0.8 0.8,0.8 C 0.4,0.9 0.4,0.9 0.8,1z" />
 
-    <svg:path style="stroke-width: 1; stroke: #000000"
+    <svg:path style="stroke-width: 1; stroke: foreground"
     d="M 0.8 1 C 1,1 1,0.8 0.8,0.8 C 0.4,0.9 0.4,0.9 0.8,1" />
 
     <svg:path style="fill: background"
     d="M 0.2 1 C 0,1 0,0.8 0.2,0.8 C 0.6,0.9 0.6,0.9 0.2,1z" />
 
-    <svg:path style="stroke-width: 1; stroke: #000000"
+    <svg:path style="stroke-width: 1; stroke: foreground"
     d="M 0.2 1 C 0,1 0,0.8 0.2,0.8 C 0.6,0.9 0.6,0.9 0.2,1" />
 
-    <svg:line style="stroke-width: 1; stroke: #000000" x1="0.5"
+    <svg:line style="stroke-width: 1; stroke: foreground" x1="0.5"
     y1="0.9" x2="0.5" y2="0" />
   </svg:svg>
 </shape>
