@@ -84,22 +84,22 @@
   </connections>
   <aspectratio type="fixed"/>
   <svg:svg>
-    <svg:polygon style="fill: #020202" points="16,-18.5 35,-18.5 35,-7.5 39,-0.5 12,-0.5 16,-7.5 "/>
-    <svg:polygon style="stroke-width: 0.1; stroke: #000000" points="16,-18.5 35,-18.5 35,-7.5 39,-0.5 12,-0.5 16,-7.5 "/>
+    <svg:polygon style="fill: foreground" points="16,-18.5 35,-18.5 35,-7.5 39,-0.5 12,-0.5 16,-7.5 "/>
+    <svg:polygon style="stroke-width: 0.1; stroke: background" points="16,-18.5 35,-18.5 35,-7.5 39,-0.5 12,-0.5 16,-7.5 "/>
     <svg:line style="stroke-width: 0.1; stroke: #808080" x1="16" y1="-7.5" x2="35" y2="-7.5"/>
-    <svg:polygon style="fill: #ffffff" points="16.5,-18 34.5,-18 34.5,-8 16.5,-8 "/>
-    <svg:polygon style="stroke-width: 0.1; stroke: #000000" points="16.5,-18 34.5,-18 34.5,-8 16.5,-8 "/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="15.75" y1="-5.25" x2="35.25" y2="-5.25"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="15.375" y1="-4.625" x2="35.625" y2="-4.625"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="16.125" y1="-5.875" x2="34.875" y2="-5.875"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="15" y1="-4" x2="16.5" y2="-6.5"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="36" y1="-4" x2="34.5" y2="-6.5"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="15" y1="-4" x2="36" y2="-4"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="16.5" y1="-6.5" x2="34.5" y2="-6.5"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="20.25" y1="-4" x2="20.4375" y2="-4.625"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="30.5587" y1="-4.62496" x2="30.5625" y2="-4.625"/>
-    <svg:line style="stroke-width: 0.1; stroke: #ffffff" x1="30.75" y1="-4" x2="30.5587" y2="-4.62496"/>
-    <svg:polygon style="stroke-width: 0.1; stroke-dasharray: 0.2; stroke: #ffffff" points="24,-3 27,-3 27.5,-1.5 23.5,-1.5 "/>
+    <svg:polygon style="fill: background" points="16.5,-18 34.5,-18 34.5,-8 16.5,-8 "/>
+    <svg:polygon style="stroke-width: 0.1; stroke: foreground" points="16.5,-18 34.5,-18 34.5,-8 16.5,-8 "/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="15.75" y1="-5.25" x2="35.25" y2="-5.25"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="15.375" y1="-4.625" x2="35.625" y2="-4.625"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="16.125" y1="-5.875" x2="34.875" y2="-5.875"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="15" y1="-4" x2="16.5" y2="-6.5"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="36" y1="-4" x2="34.5" y2="-6.5"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="15" y1="-4" x2="36" y2="-4"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="16.5" y1="-6.5" x2="34.5" y2="-6.5"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="20.25" y1="-4" x2="20.4375" y2="-4.625"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="30.5587" y1="-4.62496" x2="30.5625" y2="-4.625"/>
+    <svg:line style="stroke-width: 0.1; stroke: background" x1="30.75" y1="-4" x2="30.5587" y2="-4.62496"/>
+    <svg:polygon style="stroke-width: 0.1; stroke-dasharray: 0.2; stroke: background" points="24,-3 27,-3 27.5,-1.5 23.5,-1.5 "/>
   </svg:svg>
 </shape>
 <!-- Alan Horkan, 2002 -->
